--- a/index.html
+++ b/index.html
@@ -16,10 +16,16 @@
 		    <p>
 		        Search the definition of a word. (e.g. php, javascript, definition etc.)
 		    </p>
-		    <!--<form action="request.php" method="get" id="form">-->
-    		    <input type="text" name="search" id="search" placeholder="Search..">
+		    <form action="request.php" method="get" id="form">
+    		    Word: <input type="text" id="searching" placeholder="Search.." >
     		    <button type="button" id="searchbttn">Search</button>
-		   <!-- </form>-->
+		   </form>
+		</div>
+		
+		<div>
+			<h2 id="r-head"></h2>
+			<span id="result"></span>
+			
 		</div>
 	</body>
     
